AC_INIT([repp], [beta], [rdrid@dridan.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_CXX
AC_PROG_CPP

AC_LANG_PUSH([C++])

AX_LIB_ICU([],
   [
      export CPPFLAGS="$ICU_CPPFLAGS $CPPFLAGS"
      export LDFLAGS="$ICU_LDFLAGS $LDFLAGS"
      export LIBS="$ICU_LIBS $LIBS"
   ],
   [AC_MSG_ERROR([required ICU library are missing])])


BOOST_REQUIRE
BOOST_FILESYSTEM
BOOST_PROGRAM_OPTIONS
BOOST_REGEX

CPPFLAGS="${BOOST_CPPFLAGS} ${CPPFLAGS}"
LDFLAGS="${BOOST_FILESYSTEM_LDFLAGS} ${BOOST_PROGRAM_OPTIONS_LDFLAGS} ${BOOST_REGEX_LDFLAGS} ${LDFLAGS}"
LIBS="${BOOST_FILESYSTEM_LIBS} ${BOOST_PROGRAM_OPTIONS_LIBS} ${BOOST_REGEX_LIBS} ${LIBS}"

AC_DEFINE(REPP_STANDALONE)

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	])
AC_OUTPUT
